--- a/src/App.css
+++ b/src/App.css
@@ -60,8 +60,58 @@
 }
 
 .feature-text {
-  height: 100px;
   white-space: normal;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.footer-logo {
+  height: 50px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'mitr', sans-serif;
+}
+h1 {
+  font-size: 28px;
+}
+h2 {
+  font-size: 24px;
+  padding-bottom: 0.5em;
+  margin-top: 1em;
+  font-weight: bold;
+}
+h3 {
+  font-size: 22px;
+}
+p {
+  margin-bottom: 1em;
+}
+blockquote {
+  font-family: 'mitr', sans-serif;
+  padding-left: 2em;
+  background-color: whitesmoke;
+  padding-top: 1em;
+  padding-right: 1em;
+  padding-bottom: 0.5em;
+  margin-bottom: 1em;
+}
+h1.feature-text,
+h2.feature-text,
+h3.feature-text,
+h4.feature-text,
+h5.feature-text,
+h6.feature-text {
+  font-size: inherit;
+  font-family: inherit;
+  margin-top: inherit;
+  padding-bottom: inherit;
 }
